# qdb-demo-tradingdesk

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake_modules/: LibFindMacros.cmake  add_boost_test.cmake  add_link_options.cmake  binutils.cmake  build_types.cmake  clang.cmake  compiler_flags.cmake  cpack_config.cmake  cpu_arch.cmake  ide_folders.cmake  linker_flags.cmake  options.cmake  output_directories.cmake  policies.cmake  preprocessor_definitions.cmake  qdb_add_executable.cmake  qdb_version.cmake  realtime.cmake  remove_compile_options.cmake  remove_from_property.cmake  system_libraries.cmake  warnings.cmake
qdb/: .gitignore  README.md
scripts/release/: set_version.sh
src/: CMakeLists.txt  djia.py  generator.cpp
src/generator/: CMakeLists.txt  generator.cpp
src/nasdaq_exec/: CMakeLists.txt  itch_exec.hpp  itch_messages.hpp  itch_status.hpp  nasdaq_exec.cpp
src/simulator/: CMakeLists.txt  broker.hpp  dow_jones.cpp  dow_jones.hpp  error.cpp  error.hpp  index.cpp  index.hpp  products.hpp  quote.cpp  quote.hpp  quote_generator.hpp  simulator.cpp  trade.cpp  trade.hpp  trader.hpp
src/utils/: CMakeLists.txt  file_mapping.hpp  file_stream.hpp  gregorian.hpp  humanize_number.cpp  humanize_number.hpp  make_array.hpp  mktime.cpp  mktime.hpp  precise_time.cpp  precise_time.hpp  stringify.cpp  stringify.hpp  time.cpp  time.hpp  timespec.hpp  timestamp_unit.hpp  utils.cpp  utils.hpp  version.hpp
